--- a/S09_ConsumingProdMicros/GeekShopping/GeekShopping.Web/GeekShopping.Web.csproj
+++ b/S09_ConsumingProdMicros/GeekShopping/GeekShopping.Web/GeekShopping.Web.csproj
@@ -6,8 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <ProjectReference Include="..\GeekShopping.ProductAPI\GeekShopping.ProductAPI.csproj" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
